--- a/huddle-landing-page-with-single-introductory-section-master/styles.css
+++ b/huddle-landing-page-with-single-introductory-section-master/styles.css
@@ -43,6 +43,7 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: hidden;
 }
 
 /* Main data */
@@ -180,7 +181,7 @@ body{
   }
 
   .main{
-    margin: 3.2rem auto;
+    margin: 3rem auto;
     display: grid;
     grid-template-columns: 3fr 2fr;
     column-gap: 2rem;
@@ -204,7 +205,7 @@ body{
 
   .social-links{
     justify-content: flex-end;
-    margin: 0 2rem;
+    margin: 0 2rem 1rem;
     align-self: flex-end;
   }
   .social-link{
