--- a/social-proof-section-master/styles.css
+++ b/social-proof-section-master/styles.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;700&display=swap');
 
 :root{
-  --very-dark-magenta: hsl(300,43%,22%);
-  --soft-pink: hsl(333,80%,67%);
-
-  --dark-grayish-magenta: hsl(303,10%,53%);
-  --light-grayish-magenta : hsl(300,24%,96%);
-} 
+  --very-dark-magenta : hsl(300, 43%, 22%);
+  --soft-pink : hsl(333, 80%, 67%);
+  --dark-grayish-magenta : hsl(303, 10%, 53%);
+  --light-grayish-magenta : hsl(300, 24%, 96%);
+}
+/* Reset */
 
 *{
   margin: 0;
@@ -14,165 +14,130 @@
   box-sizing: border-box;
 }
 
-img{
-  border-radius: 50%;
+img, picture, video, canvas, svg {
+  display: block;
+  max-width: 100%;
 }
 
+input, button, textarea, select {
+  font: inherit;
+}
 
-body{
-  min-height: 100vh;
+a{
+  text-decoration: none;
+}
+
+html{
   font-family: 'League Spartan', sans-serif;
   font-size: 15px;
-  display: flex;
-  justify-content: center;
-  /* align-items: center; */
 }
 
-.container{
-  margin: 60px 0;
-  width: 90%;
+body{
+  max-width: 93.33rem;
+  padding: 1.8rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+main{
+  margin: 3rem auto;
+}
+
+.left-container{
   text-align: center;
+  margin-bottom: 2rem;
 }
 
-
-.description{
-  margin-bottom: 30px;
-}
-
-.description__header{
-  padding: 2rem;
-  color: var(--very-dark-magenta);
-  font-weight: 700;
-  font-size: 3.1rem;
+.left-container h1{
   line-height: 0.8;
-}
-
-.description__para{
-  line-height: 1.5;
-  font-size: 1.3rem;
-  color: var(--dark-grayish-magenta);
-}
-
-.website__review{
-  background-color: var(--light-grayish-magenta);
-  border-radius: 10px;
-  padding: 8px;
-  margin: 20px;
-}
-
-.star__rating{
-  margin: 10px 0;
-}
-
-.star__rating img{
-  margin: 0 4px;
-}
-
-.website__review span{
-  font-weight: 700;
-  font-size: 1.3rem;
+  margin: auto;
+  width: 60%;
   color: var(--very-dark-magenta);
+  margin-bottom: 1.5rem;
 }
 
-
-.product__ratings{
-  margin-bottom: 60px;
-}
-
-.user{
-  background-color: var(--very-dark-magenta);
-  color: #fff;
-  text-align: left;
-  padding: 40px;
-  margin: 20px 0;
-  border-radius: 16px;
-}
-
-.user__name{
-  display: flex;
-  margin-bottom: 20px;
-}
-
-.credentials p{
-  color: var(--soft-pink);
+.left-container p{
+  color: var(--dark-grayish-magenta);
+  font-weight: 500;
   font-size: 1.1rem;
 }
 
-.user__name img{
-  max-width: 50px;
-  margin-right: 25px;
+/* Right Container */
+.right-container{
+  margin-bottom: 2.5rem;
+  color: var(--very-dark-magenta);
+  font-weight: 700;
 }
 
-.user__review{
-  font-size: 1.2rem;
+
+.review{
+  padding: 0.75rem 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--light-grayish-magenta);
+  border-radius: 0.4rem;
+  margin-bottom: 1rem;
+}
+
+.star-container{
+  display: flex;
+  margin-bottom: 0.75rem;
+}
+
+.star-container img{
+  margin: 0 0.2rem;
+}
+
+/* Lower Container */
+
+.profile{
+  background-color: var(--very-dark-magenta);
+  margin: 1rem 0;
+  padding: 2rem;
+  color: #fff;
+  border-radius: 0.5rem;
+  font-weight: 500;
   line-height: 1.5;
+  font-size: 1.1rem;
 }
 
-@media (min-width: 768px){
+/* profile container */
 
-  .container{
-    max-width: 1200px;
-    
-  }
+.user-container{
+  display: flex;
+  align-items: center;
+  margin-bottom: 1.5rem;
+}
 
-  .upper-container{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-  }
-  .description{
-    width: 40%;
-    text-align: left;
+.user-container img{
+  display: block;
+  border-radius: 50%;
+  width: 2.6rem;
+  margin-right: 1rem;
+}
 
-  }
+.name{
+  font-weight: 700;
+}
 
-  .description__header{
-    padding: 0;
-    font-size: 3.5rem;
-    margin-bottom: 20px;
-  }
+.verified{
+  font-weight: 400;
+  color: var(--soft-pink);
+  display: block;
+}
 
-  .website__review{
-    padding: 20px;
-    margin: 20px 0;
-  }
+/* Footer */
+footer{
+  text-align: center;
+  font-size: 1.2rem;
+}
 
-  .first-rating{
-    transform: translateX(-100px);
-    /* margin-right: 100px;
-    margin-left: -100px; */
-  }
-  .second-rating{
-    transform: translateX(-50px);
-    /* margin-right: 50px;
-    margin-left: -50px; */
-  }
+.attribution a{
+  color: var(--very-dark-magenta);
+}
 
-  .star__rating{
-    display: inline;
-    margin-right: 24px;
-  }
-
-  .user{
-    width: 380px;
-    height: 300px;
-  }
-
-  .user__reviews{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    column-gap: 30px;
-  }
-
-  .second-user{
-    transform: translateY(30px);
-    /* margin-top: 45px; */
-    /* margin-bottom: -0px; */
-  }
-
-  .third-user{
-    transform: translateY(60px);
-    /* margin-bottom: -20px; */
-  }
-
+.attribution a:hover{
+  color: var(--soft-pink);
 }
