--- a/intro-component-with-signup-form-master/styles.css
+++ b/intro-component-with-signup-form-master/styles.css
@@ -2,10 +2,13 @@
 
 :root{
   --red : hsl(0, 100%, 74%);
-  --green : hsl(154, 59%, 51%);
+  --green:  hsl(154, 59%, 51%);
   --blue : hsl(248, 32%, 49%);
+
+  /* Neutral */
   --dark-blue : hsl(249, 10%, 26%);
   --grayish-blue : hsl(246, 25%, 77%);
+
 }
 
 *{
@@ -14,155 +17,201 @@
   box-sizing: border-box;
 }
 
-body{
-  font-family: 'Poppins',sans-serif;
+img, picture, video, canvas, svg {
+  display: block;
+  max-width: 100%;
+}
+
+input,button, textarea, select {
+  font: inherit;
+}
+
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
+}
+
+html{
   font-size: 16px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
-  background: url(./images/bg-intro-desktop.png);
-  background-size: cover;
-  background-repeat: no-repeat;
+  font-family: 'Poppins', sans-serif;
+}
+a{
+  text-decoration: none;
+}
+
+/* Body */
+
+body{
+  margin: 3rem auto;
+  max-width: 90rem;
+  padding: 1.5rem;
+  background: url(./images/bg-intro-mobile.png);
   background-color: var(--red);
 }
 
-.container{
-  max-width: 1200px;
-  display: grid;
-  column-gap: 70px;
-  grid-template-columns: repeat(2,1fr);
-}
 
-.overview-text {
+.intro{
+  text-align: center;
+  color: #fff;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  
-  /* padding: 2rem; */
-  color: #fff;
+  align-items: center;
+  margin-bottom: 2.5rem;
 }
 
-.overview-text h1{
-  font-size: 3rem;
-  margin-bottom: 20px;
-}
-
-.form-component{
-  max-width: 600px;
+.intro h1{
+  padding: 2rem;
 }
 
 .trial{
+  text-align: center;
   color: #fff;
   background-color: var(--blue);
-  padding: 1.2rem;
-  text-align: center;
-  border-radius: 12px;
-  box-shadow: 0 8px rgba(0, 0, 0, 0.2);
-  margin-bottom: 24px;
+  padding: 1.5rem 3rem;
+  border-radius: 0.6rem;
+  box-shadow: 0 8px 2px rgba(0,0,0,0.25);
+  margin-bottom: 1.5rem;
 }
 
-.trial span{
+.highlight{
   font-weight: 700;
 }
 
 .form{
   background-color: #fff;
-  padding: 20px 0;
-  border-radius: 12px;
+  padding: 1.5rem 1.2rem;
+  border-radius: 0.6rem;
+  box-shadow: 0 10px 2px rgba(0,0,0,0.25);
+  margin-bottom: 3rem;
 }
 
 .form-control{
-  width: 86%;
-  margin: 10px auto;
+  position: relative;
+  margin-bottom: 1.5rem;
 }
 
 .form-control input{
-  font-family: 'Poppins', sans-serif;
   width: 100%;
-  font-size: 1rem;
-  padding: 15px 20px;
-  margin: 5px 0;
-  color: var(--dark-blue);
-  font-weight: 600;
-  border-radius: 5px;
+  padding: 1rem;
+  border-radius: 0.3rem;
   border: 1px solid var(--grayish-blue);
-}
-
-.form-control input:focus,
-.form-control input:active{
-  outline: 0;
-  border-color: var(--blue);
 }
 
 ::placeholder{
   color: var(--dark-blue);
+  font-weight: 700;
+  font-size: 1rem;
 }
 
-.sub-btn{
-  letter-spacing: 1px;
-  font-family: 'Poppins', sans-serif;
-  font-weight: 600;
-  text-transform: uppercase;
-  font-size: 1.1rem;
-  display: block;
+.exclaim{
+  position: absolute;
+  top: 0.9rem;
+  right: 1rem;
+  visibility: hidden;
+}
+
+small{
+  color: var(--red);
+  position: absolute;
+  right: 0;
+  font-size: 0.8rem;
+  visibility: hidden;
+}
+
+.btn-submit{
+  border-radius: 0.3rem;
+  font-weight: 700;
+  width: 100%;
   color: #fff;
-  text-align: center;
   background-color: var(--green);
   border: none;
-  border-radius: 5px;
-  width: 86%;
-  padding: 15px 0;
-  box-shadow: 0 4px 0 rgba(1, 117, 69, 0.685);
-  margin: 10px auto;
+  text-transform: uppercase;
+  padding: 0.8rem;
+  box-shadow: 0 4px 1px rgba(0,80,0,0.25);
+  margin-bottom: 0.8rem;
 }
-
-.sub-btn:is(:hover,:active){
-  background-color: hsla(154, 59%, 51%,0.7);
+.btn-submit:hover{
+  background-color:hsla(154, 59%, 51%,0.7) ;
   cursor: pointer;
 }
 
 .terms{
-  color: var(--grayish-blue);
-  font-size: 0.7rem;
+  font-weight: 600;
   text-align: center;
-  margin: 20px 0;
-  font-weight: 700;
+  color: var(--grayish-blue);
+  font-size: 0.8rem;
 }
 
-.tnc-link{
+.terms .highlight{
   color: var(--red);
-  text-decoration: none;
-  
 }
 
-@media (max-width: 800px){
-  .container{
-    grid-template-columns: 1fr;
-    width: 90%;
+/* Error codes */
+
+.form-control.error #email::placeholder{
+  color: var(--red);
+}
+
+.form-control.error input{
+  border-color: var(--red);
+}
+
+.form-control.error .exclaim{
+  visibility: visible;
+}
+
+.form-control.error small{
+  visibility: visible;
+}
+
+/* Footer */
+footer{
+  text-align: center;
+}
+
+.attribution a{
+  font-weight: 600;
+  color: var(--blue);
+}
+
+.attribution  a:hover{
+  color: #fff;
+}
+
+@media(min-width: 48rem){
+  body{
+    background: url(./images/bg-intro-desktop.png) ;
+    background-color: var(--red);
+    min-height: 94vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
   }
 
-  .overview-text{
-    text-align: center;
-    margin-bottom: 60px;
+  main{
+    display: flex
   }
-  
-  .overview-text h1{
+  .intro{
+    padding-left: 4rem;
+    margin: 0;
     width: 60%;
-    margin: 10px auto 25px;
-    font-size: 1.8rem;
+    align-self: center;
+    justify-content: flex-start;
+  }
+  .intro h1{
+    margin-bottom: 1.2rem;
+    line-height: 1;
+    padding: 0;
+    text-align: start;
+    font-size: 4rem;
+  }
+  .intro p{
+    font-size: 1.2rem;
+    text-align: start;
+    padding-right: 10rem;
   }
 
-  .overview-text p{
-    width: 80%;
-    margin: 0 auto;
-    font-size: 1.1rem;
-  }
-
-
-
-  .form-component{
-    width: 100%;
-  }
-  
+.form-container{
+  flex-grow: 1;
+}
 }
