--- a/intro-component-with-signup-form-master/styles.css
+++ b/intro-component-with-signup-form-master/styles.css
@@ -189,12 +189,13 @@ footer{
   }
 
   main{
-    display: flex
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    column-gap: 1rem;
   }
   .intro{
     padding-left: 4rem;
     margin: 0;
-    width: 60%;
     align-self: center;
     justify-content: flex-start;
   }
@@ -203,12 +204,12 @@ footer{
     line-height: 1;
     padding: 0;
     text-align: start;
-    font-size: 4rem;
+    font-size: 3.2rem;
   }
   .intro p{
-    font-size: 1.2rem;
+    font-size: 1rem;
     text-align: start;
-    padding-right: 10rem;
+    padding-right: 5rem;
   }
 
 .form-container{
