--- a/intro-component-with-signup-form-master/styles.css
+++ b/intro-component-with-signup-form-master/styles.css
@@ -66,7 +66,7 @@ body{
   text-align: center;
   color: #fff;
   background-color: var(--blue);
-  padding: 1.5rem 3rem;
+  padding: 1.25rem 3rem;
   border-radius: 0.6rem;
   box-shadow: 0 8px 2px rgba(0,0,0,0.25);
   margin-bottom: 1.5rem;
@@ -212,6 +212,7 @@ footer{
   main{
     display: grid;
     grid-template-columns: repeat(2,1fr);
+    column-gap: 1rem;
   }
   .intro{
     padding-left: 4rem;
@@ -234,8 +235,8 @@ footer{
 
 .form-container{
   width: 90%;
-  max-width: 36rem;
-  justify-self: center;
+  max-width: 34rem;
+  justify-self: start;
   }
 
   .form input,
