--- a/article-preview-component-master/styles.css
+++ b/article-preview-component-master/styles.css
@@ -24,6 +24,7 @@ a{
 
 img{
   width: 100%;
+  display: block;
 }
 
 h1,h2,h3,h4,h5,h6{
@@ -42,6 +43,7 @@ body{
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 .main-box{
@@ -52,14 +54,14 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
+  box-shadow: 0px 4px 20px 4px rgba(0,0,0,0.2);
 }
 
-.text-container h1, .description{
-  padding: 0 2.46rem;
+.text{
+  padding: 2.5rem 2.46rem 1.5rem;
 }
 
 .text-container{
-  margin-top: 2.5rem;
   line-height: 1.6;
   display: flex;
   flex-direction: column;
@@ -67,22 +69,20 @@ body{
 }
 
 .top-container{
-  max-height: 15.384rem;
+  height: 15.384rem;
   overflow: hidden;
 }
 
 .top-container img{
-  height: 100%;
   object-fit: cover;
   object-position: center;
+  border-radius: 0.75rem 0.75rem 0 0;
 }
-
 
 .text-container h1{
   margin-bottom: 1rem;
   font-size: 1.3rem;
 }
-
 
 .text-container .description{
   color: var(--desat-dark-blue);
@@ -90,19 +90,22 @@ body{
   font-size: 1.06rem;
 }
 
-/* Changing-container */
+/* Profile */
+
+.bottom-container{
+  width: 100%;
+  padding: 1rem 2.46rem 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
 .changing-container{
-  width: 100%;
-  margin-top: 1.5rem;
+  position: relative;
 }
 
 .profile-container{
-  padding: 0.7rem 2.46rem;
-  /* margin: 1.5rem 0; */
-  display: flex;
   justify-content: space-between;
-  align-items: center;
 }
 
 .profile-container .profile{
@@ -129,6 +132,7 @@ body{
   display: block;
   color: var(--grayish-blue);
 }
+/* share-icon */
 
 .share{
   width: 2.463rem;
@@ -140,52 +144,66 @@ body{
   justify-content: center;
 }
 
-.share.invert{
-  background-color: var(--desat-dark-blue);
-}
-
-.share.invert img{
-  filter: brightness(0)invert(1);
-}
-
 .share img{
-  width: 1rem;
+  width: 1.3rem;
 }
 
 .share:hover{
   cursor: pointer;
 }
+
+/* share activations */
 .share-container{
+  position: absolute;
+  top: 0;
+  left: 0;
   display: flex;
   align-items: center;
-  justify-content: space-between;
   background-color: var(--very-dark-grayish-blue);
-  padding: 0.75rem 2.46rem;
 }
 
 .details{
-  width: 65%;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 1rem 0;
 }
 
+/* Share wordings */
 .details p{
   font-weight: 500;
-  color: var(--light-grayish-blue);
+  font-size: 0.9rem;
+  color: var(--grayish-blue);
   text-transform: uppercase;
   letter-spacing: 5px;
 }
 
 .social-icon{
+  margin: 0 0.75rem;
   width: 1.54rem;
   height: 1.54rem;
 }
 
-
 .social-icon img{
   width: inherit;
+}
+
+/* Js Changes */
+.bottom-container.invertBg{
+  background-color: var(--very-dark-grayish-blue);
+}
+
+.hide{
+  display: none;
+}
+
+/* Logo changes */
+.share.invert{
+  background-color: var(--desat-dark-blue);
+}
+
+.share.invert img{
+  filter: brightness(0)invert(1);
 }
 
 /* Footer */
@@ -203,7 +221,78 @@ footer a:hover{
   color: #FFB964;
 }
 
-/* Js Changes */
-.hidden{
-  display: none;
+@media (min-width: 27.5rem) and (max-width: 48rem){
+  .main-box{
+    max-width: 30.769rem;
+  }
+}
+
+@media (min-width: 48rem){
+
+  .main-box{
+    display: grid;
+    grid-template-columns: 40% 60%;
+    max-width: 56.154rem;
+    overflow: visible;
+  }
+
+
+  .top-container{
+    max-height: 100%;
+    height: 100%;
+  }
+
+  .top-container img{
+    border-radius: 0.75rem 0 0 0.75rem;
+    height: 100%;
+    object-fit: cover;
+    object-position: left ;
+  }
+
+  .text-container{
+    padding: 2.5rem ;
+  }
+
+  .text,.bottom-container{
+    padding: 0;
+  }
+
+  .text h1{
+    font-size: 1.6rem;
+  }
+
+  .text p{
+    margin-bottom: 1.5rem;
+  }
+
+  .bottom-container.invertBg{
+    background-color: #fff;
+  }
+  
+
+  .share-container{
+    box-shadow: 0 10px 10px 0 rgba(0,0,0,0.3);
+    width: 19.07rem;
+    padding: 0rem 2rem;
+    top: -5rem;
+    left: 17rem;
+    border-radius: 0.75rem;
+  }
+
+
+  .details p{
+    margin: 0 0.5rem;
+  }
+
+  .triangle-down{
+    width: 0;
+    height: 0;
+    border-right: 12px solid transparent;
+    border-left: 12px solid transparent;
+    border-top: 24px solid var(--very-dark-grayish-blue);
+    position: absolute;
+    top: 3rem;
+    left: 50%;
+  }
+
 }
