--- a/huddle-landing-page-with-alternating-feature-blocks-master/styles.css
+++ b/huddle-landing-page-with-alternating-feature-blocks-master/styles.css
@@ -45,6 +45,16 @@ html{
   background-image: url(./images/bg-hero-mobile.svg);
 }
 
+body{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.header,.site-footer{
+  width: 100%;
+}
+
 .header nav{
   display: flex;
   justify-content: space-between;
@@ -57,9 +67,9 @@ html{
 }
 
 .header__cta--button{
-  font-size: 0.6rem;
+  font-size: 0.65rem;
   font-weight: 700;
-  padding: 0.25rem 1.1rem;
+  padding: 0.3rem 1.1rem;
   border-radius: 0.667rem;
   border: none;
   box-shadow: 0 2px 7px rgba(0,0,0,0.25);
@@ -72,6 +82,7 @@ html{
 }
 
 .header__textbox{
+  color: var(--very-dark-cyan);
   padding: 1.2rem;
   text-align: center;
 }
@@ -115,6 +126,9 @@ main{
   padding:1.33rem 2.22rem;
   text-align: center;
   margin: 2.22rem 1.11rem;
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
 }
 
 .bold-title{
@@ -127,8 +141,8 @@ main{
   width: 14.22rem;
 }
 
-.dt-text{
-  font-size: 0.778rem;
+.dt-para{
+  font-size: 0.78rem;
   line-height: 1.5;
   color: var(--grayish-blue);
 }
@@ -238,4 +252,134 @@ main{
 
 .attribution a:hover{
   color: hsl(321,100%,80%);
+}
+
+
+/* Media queries */
+
+@media(min-width: 48rem){
+  .header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .header nav{
+    width: 98%;
+  }
+  .header nav,.header__textbox{
+    max-width: 71.11rem;
+  }
+
+  .header__logo{
+    width: 11.11rem;
+  }
+
+  .header__cta--button{
+    font-size: 0.778rem;
+    padding: 0.5rem 2.5rem;
+    border-radius: 1.5rem;
+  }
+
+  .header__textbox{
+    display: flex;
+    align-items: center;
+  }
+
+  .header__textbox > * {
+    flex-basis: 100%;
+  }
+
+  .textbox{
+    text-align: start;
+    padding-right: 7rem;
+  }
+
+  .textbox h1{
+    font-size: 2.222rem;
+  }
+
+  .textbox p{
+    font-size: 1rem;
+  }
+
+  main{
+    max-width: 68.44rem;
+  }
+
+  .data-container{
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+    flex: 1;
+  }
+
+  .reversed-container{
+    padding-left: 6.667;
+    flex-direction: row-reverse;
+  }
+
+  .dt-text{
+    padding-left: 6.667rem;
+    width: 45%;
+    text-align: start;
+  }
+
+  .dt-text .bold-title{
+    font-size: 1.556rem;
+  }
+
+  .dt-text p{
+    font-size: 1rem;
+  }
+
+  .container-image{
+    width: 20.44rem;
+    height: 20.44rem;
+  }
+
+  .abs-cta{
+    max-width: 44.44rem;
+    flex-direction: column;
+    padding: 3.33rem 7.33rem;
+  }
+
+  .abs-cta .bold-title{
+    font-size: 1.778rem;
+  }
+
+  .abs-cta .cta--start{
+    border-radius: 2.22rem;
+    padding: 1.1rem;
+    font-size: 1.112rem;
+    width: 22.22rem;
+  }
+  .site-footer{
+    width: 100%;
+  }
+  .max-width{
+    margin: auto;
+    max-width: 69rem;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+  }
+
+  .container-b,
+  .container-c{
+    align-self: center;
+    justify-self: center;
+  }
+
+  .container-d{
+    margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .attribution{
+    width: 100%;
+    font-size: 1rem;
+    padding-bottom: 1rem;
+  }
 }
