--- a/equalizer-landing-page/styles.css
+++ b/equalizer-landing-page/styles.css
@@ -33,6 +33,8 @@ html{
 }
 
 body{
+  margin: auto;
+  max-width: 90rem;
   background: url(./assets/bg-main-mobile.png) no-repeat;
   background-position: top -16rem left -10%;
 }
@@ -130,7 +132,6 @@ button{
   align-items: center;
   justify-content: center;
   height: 3.8125rem;
-  
 }
 
 button img{
