--- a/skilled-elearning-landing-page/styles.css
+++ b/skilled-elearning-landing-page/styles.css
@@ -124,6 +124,7 @@ header .logo, footer .logo{
 }
 
 .card-container{
+  background-color: #fff;
   border-radius: 0.625rem;
   box-shadow: 0 50px 25px hsla(0, 0%, 0%, 0.042);
   padding: 3.5rem 1.75rem 2rem;
